--------
  5.0 (in progress)
--------

* Completely overhauled the platform support; too many changes to list
* Enabled per-project configurations and platforms
* Enabled per-configuration file lists
* Enabled per-configuration toolset selection
* Added custom build rules
* Added support for Visual Studio 2012 (mopey)
* Added token expansion
* Added external() to reference non-Premake generated projects
* Added remove...() API to remove values from list fields
* Folders containing single sub-folder now trimmed from top of source tree
* Added debugformat with C7 support for Visual Studio
* The error message for invalid flags now includes the offending value
* The include() function will now include each file only once
* The include() function can now include specific files
* path.translate() now defaults to Windows-style backslashes
* Added NoWarnings flag for Visual Studio (xpol)
* Added debugcommand for Visual Studio (xpol)
* Bug 1674173: Allow source files to have the same name
* Added forceinclude() to specify forced include files
* Visual Studio C# projects now support architectures
* Visual Studio C# projects now support pre- and post-build commands
* Visual Studio C# projects can now link to external files
* Added NoImplicitLink flag to force explicit linking from Visual Studio
* Decoupled VS2010 smaller type checks (/RTCc) from extra warnings (/W4)
* Added NoRuntimeChecks flag to disable Visual Studio default checks
* Generated Visual Studio GUIDs are now deterministic
* Added support for Visual Studio solution groups
* Added dependson() to specify non-linking dependencies (Alexey Orlov)
* Added startproject() to specify solution startup project
* Added ExcludeFromBuild flag to mark source files as non-buildable
* Added MultiProcessorCompile flag to run multiple compiler processes
* Fixed assembly references for Visual Studio Managed C++ projects
* Improved Xbox 360 support
* Added support for Clang C/C++ compiler


-------
  4.4  (in progress)
-------
